--- a/restoran/restoran2.html
+++ b/restoran/restoran2.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="restoran1.php">Home</a>
+          <a class="nav-link active" aria-current="page" href="restoran2.html">Home</a>
         </li>
       </ul>
     </div>
